* Tokenizer regex fixed to cover special characters * Timeout on open tooltip now works properly * Bug on Link to existing artifact window on Firefox fixed

--- a/AdaptiveArtifacts/htdocs/css/asa.css
+++ b/AdaptiveArtifacts/htdocs/css/asa.css
@@ -300,6 +300,7 @@ div.filter input {
 #artifact-select table.listing {
     width: 392px;
     clear: none;
+    float: left;
 }
 
 table.listing td.message,
